debut de semaine

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <figure>
                 <figcaption><img src="mattgroening.jpg" alt="portrait matt groening">
                             <img src="omerdansant.gif" alt="omer fiesta">
+                            <img src="feuxartifice.gif" alt="image feux dartifice">
                 <!-- figcaption faire des légende de quelque chose -->
                 </figcaption>
                      <h3> Matt Groening </h3>
